added the footer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>welcome to the AI project peom generator</h1>
-<script src="src/index.js"></script>
+
+<footer>
+    this AI  project was coded by <a href="https://github.com/ISIOMA123123" target="_blank">Succes</a> and its open sourced <a href="https://github.com/ISIOMA123123/project-poem-generator" target="_blank">on Github</a> 
+and is hosted on <a href="https://generatingpoem.netlify.app/" target="_blank">Netlify</a>
+</footer>
+    <script src="src/index.js"></script>
 </body>
 </html>
