added the basic html structure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
     <title>AI poem generator</title>
 </head>
 <body>
-    <h1>welcome to the AI project peom generator</h1>
+    <header>
+         <h1> AI project peom generator</h1>
+    </header>
+   
+    <main>
+       <form action="">
+        <input type="text" placeholder="Enter the topic of the poem"
+        autofocus
+        required
+        autocomplete="off">
+       <input type="submit">
+    </form> 
+    <div>
+        The poem will go here
+        <br>
+        The poem will go here
+    </div>
+    </main>
 
 <footer>
     this AI  project was coded by <a href="https://github.com/ISIOMA123123" target="_blank">Succes</a> and its open sourced <a href="https://github.com/ISIOMA123123/project-poem-generator" target="_blank">on Github</a> 
