--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>AI poem generator</title>
 </head>
 <body>
+    <div class="container">
     <header>
          <h1> AI project peom generator</h1>
     </header>
@@ -16,10 +17,11 @@
         <input type="text" placeholder="Enter the topic of the poem"
         autofocus
         required
-        autocomplete="off">
-       <input type="submit">
+        autocomplete="off"
+        class="poemTopic">
+       <input type="submit" class="submitButton">
     </form> 
-    <div>
+    <div class="poem">
         The poem will go here
         <br>
         The poem will go here
@@ -30,6 +32,7 @@
     this AI  project was coded by <a href="https://github.com/ISIOMA123123" target="_blank">Succes</a> and its open sourced <a href="https://github.com/ISIOMA123123/project-poem-generator" target="_blank">on Github</a> 
 and is hosted on <a href="https://generatingpoem.netlify.app/" target="_blank">Netlify</a>
 </footer>
+</div>
     <script src="src/index.js"></script>
 </body>
 </html>
