added the basic form handling and typewriter plugin

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="src/style.css">
+<script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <link rel="stylesheet" href="src/style.css">
     <title>AI poem generator</title>
 </head>
 <body>
@@ -13,7 +14,7 @@
     </header>
    
     <main>
-       <form action="">
+       <form action="" id="poemGeneratorForm">
         <input type="text" placeholder="Enter the topic of the poem"
         autofocus
         required
@@ -21,10 +22,8 @@
         class="poemTopic">
        <input type="submit" class="submitButton">
     </form> 
-    <div class="poem">
-        The poem will go here
-        <br>
-        The poem will go here
+    <div class="poem" id="poem">
+        
     </div>
     </main>
 
