--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-    <link rel="stylesheet" href="src/style.css">
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<link rel="stylesheet" href="src/style.css">
     <title>AI poem generator</title>
 </head>
 <body>
@@ -19,7 +20,8 @@
         autofocus
         required
         autocomplete="off"
-        class="poemTopic">
+        class="poemTopic"
+        id="user-poem-topic">
        <input type="submit" class="submitButton">
     </form> 
     <div class="poem" id="poem">
