improved the user experience

--- a/index.html
+++ b/index.html
@@ -15,16 +15,20 @@
     </header>
    
     <main>
+        <div class="form-container">
        <form action="" id="poemGeneratorForm">
-        <input type="text" placeholder="Enter the topic of the poem"
+        <input type="text" placeholder="Enter the topic of the poem you would like to generate"
         autofocus
         required
         autocomplete="off"
         class="poemTopic"
         id="user-poem-topic">
        <input type="submit" class="submitButton">
-    </form> 
-    <div class="poem" id="poem">
+    </form>
+    <div class="example">Example: "Peace", "Love", "War", "Attention".... </div>
+    </div>
+
+    <div class="poem hidden" id="poem">
         
     </div>
     </main>
